# nfti-py

./: .env.example  pyproject.toml  requirements.txt  run_api.py  vercel.json
api/: auth.py  config.py  database.py  dependencies.py  main.py  models.py
api/database/: __init__.py  base.py  blob.py  redis.py
api/routes/: __init__.py  analysis.py  health.py  leaderboard.py
api/utils/: __init__.py
data/: chainlist_rpcs.json  custom_chains.json  rollup_stages.json
src/nft_inspector/: access_control_detector.py  analyzer.py  cli.py  client.py  compliance_checker.py  data_uri_utils.py  ens.py  html_analyzer.py  interface_detector.py  models.py  proxy_detector.py  svg_analyzer.py  trust_analyzer.py  trust_models.py  types.py
src/nft_inspector/chains/: __init__.py  chain_models.py  chain_provider.py  web3_wrapper.py
src/nft_inspector/uri_parsers/: __init__.py  arweave_parser.py  base.py  data_uri_parser.py  http_parser.py  ipfs_parser.py  resolver.py
